# mgdm2oereb.application

./: .env  .gitattributes  .gitignore  README.md  docker-compose.yml
.github/workflows/: docker-image-latest.yml  docker-image-nightly.yml  docker-image-release.yml  docker-image.yml
api_gateway/: Dockerfile
api_gateway/config/: Caddyfile.json
ilivalidator_service/: Dockerfile  entrypoint.sh
mgdm2oereb_frontend/: Dockerfile  LICENSE.md  Makefile  app.ini  pytest.ini  requirements.txt  setup.py
mgdm2oereb_frontend/src/mgdm2oereb_frontend/: __init__.py  routes.py
mgdm2oereb_frontend/src/mgdm2oereb_frontend/templates/: delivery.html  error.html  index.html  (+2 more)
mgdm2oereb_frontend/src/scss/: _variables.scss  app.scss
mgdm2oereb_frontend/tests/: conftest.py
mgdm2oereb_frontend/tests/views/: test_delivery.py  test_error.py  test_form.py  test_index.py  test_proxy.py  test_status.py
mgdm2oereb_service/: CHANGES.md  Dockerfile  Makefile  README.md  requirements-tests.txt  requirements.txt  setup.cfg  setup.py
mgdm2oereb_service/config/: gunicorn.conf.py  mgdm2oereb.yml  pygeoapi_config.yml  pygeoapi_openapi.yml
mgdm2oereb_service/src/mgdm2oereb_service/: __init__.py  flask_app.py  process.py  process_oereblex.py
mgdm2oereb_service/src/mgdm2oereb_service/pygeoapi_plugins/process/mgdm2oereb/: __init__.py  processors.py
mgdm2oereb_service/src/mgdm2oereb_service/pygeoapi_plugins/process_manager/: tinydb.py
mgdm2oereb_service/src/mgdm2oereb_service/templates/: feed.xml  index.html
mgdm2oereb_worker/: README.md
rss_trigger/: Dockerfile  loop.sh  update.py
(+7 files in other folders)
