[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.md
[bdist_wheel]
universal = 1

[flake8]
exclude = .cache,.make,.venv,.tox,build,coverage_report,dist,.tox,.eggs,ci/templates,build,dist
max-line-length = 140
ignore = E203

[tool:isort]
force_single_line = True
line_length = 140
known_first_party = redisboard
default_section = THIRDPARTY
forced_separate = test_redisboard
skip = .tox,.eggs,ci/templates,build,dist
